styles/main.css
[v-cloak] {
  display: none;
}

.jumbotron.text-center {
  padding-top: 100px;
  padding-bottom: 0px;
  background-color: white;
}

.jumbotron-heading {
  font-size: 50px;
  font-family: 'Rock Salt', cursive;
}

.jumbotron-footer {
  font-size: 20px;
  font-family: 'Rock Salt', cursive;
}

.luxbar-brand {
  font-family: 'Rock Salt', cursive;
}

.card-header {
  background-color: white;
}

#detail img {
  width: 100%;
}

.article {
  padding-top: 90px;
  padding-bottom: 90px;
}

.avatar {
  display: block;
  height: 30px;
  max-width: 30px;
}

.login-header {
  background-color: white;
}

.luxbar-menu-light {
  background-color: white;
}

